--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                   </svg>
                   دسته بندی کالا
                 </a>
+                
               </div>
               <div class="menu_line_1"></div>
               <div>
@@ -2179,7 +2180,7 @@
       <!-- end footter -->
     </div>
     <!--end make digikala-->
-    <script src="./swiper/swiper-bundle.min.css"></script>
+    <script src="./swiper/swiper-bundle.min.js"></script>
     <script>
       var swiper = new Swiper(".mySwiper", {
         slidesPerView: 12.5,
